# NTT

./: .gitignore  .gitmodules  readme.md
rtl/: Barrett_Reduction.v  CLA_Adder.v  CLA_Generator.v  Full_Adder.v  General_Barrett_Reduction.v  Half_Adder.v  Improved_Barrett_Reduction.v  Mod_Add.v  Mod_Sub.v  Sum_Generator.v  pg_Generator.v
scripts/: BU_CT.py  BU_GS.py  Folding_Barrett_Reduction.py  General_Barrett_Reduction.py  Improved_Barrett_Reduction.py  Improved_Folding_Barrett_Reduction.py  RNS.py  barrett_tb.py  change_data_to_hex.py  change_dectohex.py  change_row_to_column.py  coeff_idx.csv  data.mem  data.txt  datain_4096.mem  datain_4096.txt  datain_4096_hex.mem  expected_ntt_16.mem  helper.py  in_rns_ntt_4096.mem  in_rns_ntt_4096_hex.mem  input_ntt_hex.mem  intt_driver.py  inv_psitable.mem  inv_psitable_16.mem  karatsuba.py  key_switching.py  main.py  mod_inv.py  my_ntt.py  ntt.py  ntt_16.ipynb  ntt_16_in.mem  ntt_16_in_hex.mem  ntt_driver.py  ntt_result.txt  ntt_result_hex.mem  omega.csv  omega_idx.csv  output_file.txt  (+9 more)
sim/: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
sim/src/: CMakeLists.txt
sim/src/examples/: gs.cpp  inv_mod.cpp  simple-fft.cpp  simple-for.cpp  test-cereal.cpp  test.cpp  upper-log2-tb.cpp
sim/src/include/: fft.hpp
sim/src/lib/: fft.cpp
simulation_data/: Folding_Barrett_Reduction.txt  General_Barrett_Reduction.txt  Improved_Barrett_Reduction.txt  Improved_Folding_Barrett_Reduction.txt  process simulation data.xlsx
testbenches/: Barrett_Reduction_tb.v  Barrett_Reduction_tb.vcd  Barrett_Reduction_tb.vvp  CLA_Adder_tb.v  CLA_Adder_tb.vcd  CLA_Adder_tb.vvp  Full_Adder.vcd  Full_Adder_tb.v  Full_Adder_tb.vvp  General_Barrett_Reduction_tb.v  General_Barrett_Reduction_tb.vcd  General_Barrett_Reduction_tb.vvp  Half_Adder.vcd  Half_Adder_tb.v  Half_Adder_tb.vvp  Improved_Barrett_Reduction_tb.v  Mod_Add_tb.v  (+5 more)
(+11 files in other folders)
